Fri Jun  2 18:22:03 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Added get_all_keys() method to LeafDocument

	* Implemented in subclasses by throwing OmUnimplementedError.

Fri Jun  2 18:12:05 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Many fixes to sleepycat:

	  o Implemented document count and average document length
	    information.  (involves using a new "stats" database)

	  o Fix problem with calling get_termfreq for a term which doesn't
	    exist (used to throw: now returns 0)

	  o More useful debugging messages.  Better assertion checks.

Fri Jun  2 18:05:23 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Don't use terms with zero length names (ie, "") in the test
	  databases.

	* Add checks to API to complain about zero length termnames, and
	  assertions elsewhere in the code.

Fri Jun  2 18:00:25 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Added a text file explaining how to do distributed searches.

Fri Jun  2 13:27:01 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Added a stats database to sleepycat, to store things such as
	  document count and length information.

Thu Jun  1 18:10:12 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Implemented max_or_terms.  Activated test in apitest to check that
	  it is working.

Thu Jun  1 16:40:03 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* ProgClient now reaps its child, so no more zombie buildup.

Thu Jun  1 15:33:29 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* TcpServer no longer inherits from SocketServer, but uses it.

	* omtcpsrv now handles more than one connection by default
	  (sequentially).

Wed May 31 16:05:06 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Added support for default settings.

Tue May 30 17:52:43 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Stopped unnecessary options copying.
